upd test